traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:3: error: value update is not a member of Boolean
  verif()=false
  ^